--- a/kapitel/04_Prototyping/04-01_Frontend/04-01_Frontend.tex
+++ b/kapitel/04_Prototyping/04-01_Frontend/04-01_Frontend.tex
@@ -1,12 +1,8 @@
 \subsubsection{Frontend}
 
-\paragraph{Project Setup}%
-
-Main Application Entry Point
-
-Vite Configuration
-
 \paragraph{Project Folder Structure}
+
+\input{kapitel/04_Prototyping/04-01_Frontend/04-01_projectsetup}
 
 \input{kapitel/04_Prototyping/04-01_Frontend/04-01_APIHandling}
 
@@ -16,7 +12,7 @@ Vite Configuration
 
 \input{kapitel/04_Prototyping/04-01_Frontend/04-01_BasicChatFunctionality}
 
-\input{kapitel/04_Prototyping/04-01_Frontend/04-01_SupplierMatchinginChat}
+\input{kapitel/04_Prototyping/04-01_Frontend/04-01_SupplierMatchinginChat}%TODO Rausnehmen wegen kein Supplier Matching?
 
 \input{kapitel/04_Prototyping/04-01_Frontend/04-01_ChecklistforExtractedInformation}
 
