Added Project Folder Structure im Frontend Prototyping

--- a/kapitel/04_Prototyping/04-01_Frontend/04-01_Frontend.tex
+++ b/kapitel/04_Prototyping/04-01_Frontend/04-01_Frontend.tex
@@ -1,6 +1,6 @@
 \subsubsection{Frontend}
 
-\paragraph{Project Folder Structure}
+\input{kapitel/04_Prototyping/04-01_Frontend/04-01_ProjectFolderStructure}
 
 \input{kapitel/04_Prototyping/04-01_Frontend/04-01_projectsetup}
 
